tests/my/bad/bad004.lat
int main() {
  boolean [] v = new boolean [0];
  printInt(v.length);
  return 0;
}
